fix z-index

--- a/ib-craft-frontend/src/components/CardBlock/cardblock.module.css
+++ b/ib-craft-frontend/src/components/CardBlock/cardblock.module.css
@@ -1,4 +1,5 @@
 .card_blocks {
+    max-height: 240vh;
     margin-top: 170px;
     display: flex;
     justify-content: center;
@@ -64,7 +65,7 @@
 
 @media (max-width: 1290px) {
     .cards {
-        grid-template-rows: 290px 290px 290px;
+        grid-template-rows: 290px 290px 400px;
         grid-template-columns:none;
 
         row-gap: 250px;
